Bug 240389 - Duplicated podcast entries when start and cancel drag&drop
Summary: Duplicated podcast entries when start and cancel drag&drop
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 2.3.1-GIT
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-01 21:42 UTC by jens
Modified: 2011-01-21 17:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.1
Sentry Crash Report:


Attachments
screenshot (134.31 KB, image/png)
2010-09-04 14:36 UTC, jens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jens 2010-06-01 21:42:11 UTC
Version:           2.3.1 (using KDE 4.4.3) 
OS:                Linux

When doing drag & drop of an podcast item within the list of available podcast items (thus not drag&drop from media sources to playlist, but within the media sources listview) items you wil end up with a lot of duplicated items.

Reproducible: Always

Steps to Reproduce:
drag & drop of an podcast item within the list of available podcast items

Actual Results:  
duplicated items appear

Expected Results:  
nothing or a reorderd list, but no duplicated items

OS: Linux %28x86_64%29 release 2.6.32-22-generic
Compiler: gcc
Comment 1 Myriam Schweingruber 2010-06-02 10:45:47 UTC
Confirmed with current git.
Comment 2 Bart Cerneels 2010-07-14 21:34:37 UTC
This is no longer reproducible.
Comment 3 jens 2010-09-04 08:37:05 UTC
I can stil reproduce this bug with amarok 2.3.2 beta1
Comment 4 Myriam Schweingruber 2010-09-04 13:31:56 UTC
I can't reproduce it with latest git. Please only reopen if you can reproduce this with current git.
Comment 5 jens 2010-09-04 14:36:00 UTC
Created attachment 51307 [details]
screenshot
Comment 6 jens 2010-09-04 14:37:38 UTC
Sorry for reopening again, but even with current git I get duplicated entries when doing drag & drop within the listview (like ordening the podcast entries). See attached screenshot.
Comment 7 jens 2011-01-18 21:06:41 UTC
this issue is still valid with amarok 2.4 :(
(opensuse 11.3 with kde 4.6 from there rpm's)
Comment 8 Myriam Schweingruber 2011-01-20 01:36:49 UTC
I can't reproduce this here at all, I can't even move the episodes in the left view (which is not meant to, obviously).
Comment 9 Bart Cerneels 2011-01-21 08:55:45 UTC
This is probably specific to the RSS feed those episodes come from. I've tested all of mine and found only one feed that shows the same problem.
Please let me know the RSS feed(s) that show this bug.

At first I thought it was just a view bug but it appears those dropped episodes create database entries, so please refrain from d'n'd-ing them.
Comment 10 Bart Cerneels 2011-01-21 10:39:24 UTC
Git commit df283727ee37053cdeb6e6b9854fa9c69dfbda9c by Bart Cerneels
Pushed by shanachie into branch master

Episodes without guid should also be checked.

BUG:240389

M  +10   -5    src/core-impl/podcasts/sql/SqlPodcastMeta.cpp     
M  +1    -1    src/core-impl/podcasts/sql/SqlPodcastProvider.cpp     

http://commits.kde.org/amarok/df283727ee37053cdeb6e6b9854fa9c69dfbda9c
Comment 11 jens 2011-01-21 17:15:32 UTC
Thanks a lot for fixing this issue. Just for the reference, the podcast url where I experienced this behavior is: http://www.fritz.de/podcasts/sendungen/Blue_Moon.feed.podcast.xml