Episodes without guid should also be checked.

BUG:240389