src/core-impl/podcasts/sql/SqlPodcastMeta.cpp
@@ -647,14 +647,19 @@ SqlPodcastChannel::setImageUrl( const KUrl &imageUrl )
 Podcasts::PodcastEpisodePtr
 SqlPodcastChannel::addEpisode( PodcastEpisodePtr episode )
 {
-    DEBUG_BLOCK
-    debug() << "adding episode " << episode->title() << " to sqlchannel " << title();
-
     if( !m_provider )
         return PodcastEpisodePtr();
 
-    //check for guid and return the episode we might already have.
-    if( !episode->guid().isEmpty() && m_provider->possiblyContainsTrack( episode->guid() ) )
+    KUrl checkUrl;
+    //searched in the database for guid or enclosure url
+    if( !episode->guid().isEmpty() )
+        checkUrl = episode->guid();
+    else if( !episode->uidUrl().isEmpty() )
+        checkUrl = episode->uidUrl();
+    else
+        return PodcastEpisodePtr(); //noting to check for
+
+    if( m_provider->possiblyContainsTrack( checkUrl ) )
         return PodcastEpisodePtr::dynamicCast( m_provider->trackForUrl( episode->guid() ) );
 
     //force episodes load.
